[package]
name = "sx12xx"
version = "0.1.3"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
license = "Apache 2.0"
readme = "README.md"
description = "Rust Wrapper SX12xx"

[dependencies]
sx12xx-sys = { path = "./sx12xx-sys", version = "0.1.0" }
libm = "0.1.4"
heapless = "0.5.4"
as-slice = "*"
lorawan-device = "0.7.1"
lorawan-crypto = { git = "https://github.com/simmsb/rust-lorawan-crypto.git", version = "0.1.0" }

[profile.dev]
opt-level = "s"

[profile.release]
incremental = false
codegen-units = 1
lto = true
opt-level = "s"
